---
source: prql-compiler/tests/integration/main.rs
expression: "prql_compiler::compile(&fs::read_to_string(path).unwrap(),\n        &Options::default()).unwrap()"
input_file: prql-compiler/tests/integration/queries/invoice_totals.prql
---
WITH table_1 AS (
  SELECT
    substring(CAST(i.invoice_date AS TEXT), 1, 7) AS month,
    substring(CAST(i.invoice_date AS TEXT), 1, 10) AS day,
    SUM(ii.unit_price * ii.quantity) AS _expr_0,
    SUM(ii.quantity) AS _expr_1,
    COUNT(DISTINCT i.invoice_id) AS _expr_2
  FROM
    invoices AS i
    JOIN invoice_items AS ii ON i.invoice_id = ii.invoice_id
  GROUP BY
    substring(CAST(i.invoice_date AS TEXT), 1, 7),
    substring(CAST(i.invoice_date AS TEXT), 1, 10)
)
SELECT
  month,
  day,
  CAST(_expr_2 AS INT) AS num_orders,
  CAST(_expr_1 AS INT) AS num_tracks,
  ROUND(CAST(_expr_0 AS FLOAT) * 100) / 100 AS total_price,
  CAST(
    SUM(_expr_1) OVER (
      PARTITION BY month
      ORDER BY
        day ROWS BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW
    ) AS INT
  ) AS running_total_num_tracks,
  CAST(
    LAG(_expr_1, 7) OVER (
      ORDER BY
        day ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
    ) AS INT
  ) AS num_tracks_last_week
FROM
  table_1 AS table_0
ORDER BY
  day

-- Generated by PRQL compiler version:0.7.1 (https://prql-lang.org)

